--- a/config/config.env
+++ b/config/config.env
@@ -1,2 +1,3 @@
 NODE_ENV=development
-PORT=3000
+PORT=9000
+MANGO_URI=mongodb+srv://chid:chid@chid.tvruw.mongodb.net/devcamper?retryWrites=true&w=majority
